# VG101-SU20-Lab

./: .gitignore  README.md
Final Review/: Final Review Notes.md  bird.cpp  filestream.cpp  stringstream.cpp  triangle.cpp
Lab Header/: VG101 Header Demo.html  VG101 Lab Manual Header.md
Lab00 - Intro/: Test lab_Wu Qinhang.html  index.md  图解计算机科学.ass
Lab01 - Intro to Matlab/: Lab 1 Worksheet.md
Lab02 - Control/: Distinct Powers - Writeup (Online).md
Lab03 - Function and Plot/: Lab 3 Manual.md
Lab03 - Function and Plot/MVC/: controller.m
Lab05 - Intro to C/: Lab 5 Worksheet.md
Lab05 - Intro to C/clion_sample/: ex1.c  ex5.c  mpow.c  quo.c  quo.h  rem.c  sum.h
Lab06 - C Control/: Lab 6 Worksheet.md  stack_sample.c
Lab07 - C Struct/: Lab 7 Manual.md
Lab08 - C Advanced/: double_list_test.c
Lab09 - Mid2/: Lab 9 Worksheet.md  fileIO_sample.c
Lab1 - Matlab/: Lab 1 Manual.md  Markdown Tutorial.md
Lab10 - Basic C++/: Lab 10 Worksheet.md
Lab10 - Intro to C++/: Lab 10 Worksheet.md
Lab10 - Intro to C++/starter_files/: rational.c  rational.h
Lab11 - String and Class/: Lab 11 Manual.md  Lab 11 Worksheet.md
Lab2 - Control/: Distinct Powers - Writeup (Published).md  Lab 2 Manual.md  Lab 2 Worksheet.md
Lab3 - Function and Plot/: Lab 3 Worksheet.md
Lab4 - Recursion/: Division - Writeup (Online).md  Division - Writeup (Published).md  Lab 4 Manual.md  Lab 4 Worksheet.md
Lab5 - Basic C/: Lab 5 Abandoned.md  Lab 5 Manual.md
Lab5 - Basic C/clion_sample/: CMakeLists.txt  README.md  ex2.c  ex3.c  ex5.h  mpow.h  prod.c  prod.h  rem.h  sum.c
Lab6 - C Control/: Arknights.c  Lab 6 Manual.md  stack_sample.c
Lab7 - C Struct/: Lab 7 Worksheet.md
Lab8 - C Advanced/: Lab 8 Manual.md  Lab 8 Worksheet.md  double_list.h  double_list_startup.c
Lab9 - Mid2/: Lab 9 Manual.md  ex1_sample.c  fileIO_sample.c
OpenGL Reference/OpenGL Test/: CMakeLists.txt  glmain.cpp  home.cpp  home.h  shape.cpp  shape.h
Rubric/: Mid1 Autograder.m  Mid2 Ex2.md  Mid2 Ex3.md  Mid2 Ex4.md  Mid2 Ex5.md  README.md
(+13 files in other folders)
